# barebones-qt-app

./: CMakeLists.txt  LICENSE  README.md  main.cpp
